-
Bug
-
Resolution: Fixed
-
P2
-
11, 16, 17
-
b29
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8258364 | 17 | Vladimir Ivanov | P2 | Resolved | Fixed | b02 |
| JDK-8272837 | 11.0.14-oracle | Vladimir Ivanov | P2 | Closed | Fixed | b01 |
Today I noticed that 2 JVMCI tests failed which seems the same way when run with "-ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:-TieredCompilation" flags:
compiler/jvmci/compilerToVM/ReprofileTest.java
"profiling info didn't change after reprofile"
compiler/jvmci/compilerToVM/IsMatureVsReprofileTest.java
"Got unexpected isMature state after reprofiling: expected false to equal true"
It could be tests bug.
compiler/jvmci/compilerToVM/ReprofileTest.java
"profiling info didn't change after reprofile"
compiler/jvmci/compilerToVM/IsMatureVsReprofileTest.java
"Got unexpected isMature state after reprofiling: expected false to equal true"
It could be tests bug.
- backported by
-
JDK-8258364 [JVMCI] profiling info didn't change after reprofile
-
- Resolved
-
-
JDK-8272837 [JVMCI] profiling info didn't change after reprofile
-
- Closed
-
- relates to
-
JDK-8252049 Native memory leak in ciMethodData ctor
-
- Resolved
-