8257919: [JVMCI] profiling info didn't change after reprofile